# Desktop-Background-Timer

./: LICENSE  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  dbt  dbt.conf
autom4te.cache/: output.0  requests  traces.0
src/: main.c  main.cc
src/.deps/: main.Po
